feed-card 안의 데이터 뿌리기 완료 (05.02) db > feed like 열 추가, feedlike 테이블 추가, feedlike시퀀스 추가/ feedfile 테이블 추가, feedfile 시퀀스 추가 => 각 테이블 테스트 데이터 추가(fk 받은 테이블들 데이터도) feed (xml,mapper,test,service)파일 생성 및 입력 - selectAll

--- a/src/main/resources/templates/feed/feedpage.html
+++ b/src/main/resources/templates/feed/feedpage.html
@@ -117,16 +117,17 @@
 
     <section class="feed_contentbox">
         <div class="feed_contentlayer">
-            <div class="feed_cardbox">
+
+            <div class="feed_cardbox" th:each="card : ${feedList}">
                 <div class="feed_infobox">
                     <div class="feed_metadata">
                         <div class="feed_user">
                             <a href="">
-                                <span class="nickname">aaa</span>
+                                <span class="nickname" th:text="${card.userNickname}"></span>
                             </a>
                         </div>
                         <div class="feed_timebox">
-                            <span>1시간전</span>
+                            <span th:text="${card.feedDate}"></span>
                         </div>
                     </div>
                     <button class="feed_follow_btn">팔로우</button>
@@ -137,208 +138,10 @@
                 <div class="feed_likebox">
                     <button class="feed_like_btn">
                         <span class="like_icon">♡ 좋아요</span>
-                        <span class="like_sheep">0</span>
+                        <span class="like_sheep" th:text="${card.likeCnt}"></span>
                     </button>
                 </div>
             </div>
-
-            <div class="feed_cardbox">
-                <div class="feed_infobox">
-                    <div class="feed_metadata">
-                        <div class="feed_user">
-                            <a href="">
-                                <span class="nickname"></span>
-                            </a>
-                        </div>
-                        <div class="feed_timebox">
-                            <span></span>
-                        </div>
-                    </div>
-                    <button class="feed_follow_btn">팔로우</button>
-                </div>
-                <div class="feed_cardimg">
-                    <img src="" alt="">
-                </div>
-                <div class="feed_likebox">
-                    <button class="feed_like_btn">
-                        <span class="like_icon">♡ 좋아요</span>
-                        <span class="like_sheep">0</span>
-                    </button>
-                </div>
-            </div>
-            <div class="feed_cardbox">
-                <div class="feed_infobox">
-                    <div class="feed_metadata">
-                        <div class="feed_user">
-                            <a href="">
-                                <span class="nickname"></span>
-                            </a>
-                        </div>
-                        <div class="feed_timebox">
-                            <span></span>
-                        </div>
-                    </div>
-                    <button class="feed_follow_btn">팔로우</button>
-                </div>
-                <div class="feed_cardimg">
-                    <img src="" alt="">
-                </div>
-                <div class="feed_likebox">
-                    <button class="feed_like_btn">
-                        <span class="like_icon">♡ 좋아요</span>
-                        <span class="like_sheep">0</span>
-                    </button>
-                </div>
-            </div>
-            
-            <div class="feed_cardbox">
-                <div class="feed_infobox">
-                    <div class="feed_metadata">
-                        <div class="feed_user">
-                            <a href="">
-                                <span class="nickname"></span>
-                            </a>
-                        </div>
-                        <div class="feed_timebox">
-                            <span></span>
-                        </div>
-                    </div>
-                    <button class="feed_follow_btn">팔로우</button>
-                </div>
-                <div class="feed_cardimg">
-                    <img src="" alt="">
-                </div>
-                <div class="feed_likebox">
-                    <button class="feed_like_btn">
-                        <span class="like_icon">♡ 좋아요</span>
-                        <span class="like_sheep">0</span>
-                    </button>
-                </div>
-            </div>
-            <div class="feed_cardbox">
-                <div class="feed_infobox">
-                    <div class="feed_metadata">
-                        <div class="feed_user">
-                            <a href="">
-                                <span class="nickname"></span>
-                            </a>
-                        </div>
-                        <div class="feed_timebox">
-                            <span></span>
-                        </div>
-                    </div>
-                    <button class="feed_follow_btn">팔로우</button>
-                </div>
-                <div class="feed_cardimg">
-                    <img src="" alt="">
-                </div>
-                <div class="feed_likebox">
-                    <button class="feed_like_btn">
-                        <span class="like_icon">♡ 좋아요</span>
-                        <span class="like_sheep">0</span>
-                    </button>
-                </div>
-            </div>
-            <div class="feed_cardbox">
-                <div class="feed_infobox">
-                    <div class="feed_metadata">
-                        <div class="feed_user">
-                            <a href="">
-                                <span class="nickname"></span>
-                            </a>
-                        </div>
-                        <div class="feed_timebox">
-                            <span></span>
-                        </div>
-                    </div>
-                    <button class="feed_follow_btn">팔로우</button>
-                </div>
-                <div class="feed_cardimg">
-                    <img src="" alt="">
-                </div>
-                <div class="feed_likebox">
-                    <button class="feed_like_btn">
-                        <span class="like_icon">♡ 좋아요</span>
-                        <span class="like_sheep">0</span>
-                    </button>
-                </div>
-            </div>
-
-            <div class="feed_cardbox">
-                <div class="feed_infobox">
-                    <div class="feed_metadata">
-                        <div class="feed_user">
-                            <a href="">
-                                <span class="nickname"></span>
-                            </a>
-                        </div>
-                        <div class="feed_timebox">
-                            <span></span>
-                        </div>
-                    </div>
-                    <button class="feed_follow_btn">팔로우</button>
-                </div>
-                <div class="feed_cardimg">
-                    <img src="" alt="">
-                </div>
-                <div class="feed_likebox">
-                    <button class="feed_like_btn">
-                        <span class="like_icon">♡ 좋아요</span>
-                        <span class="like_sheep">0</span>
-                    </button>
-                </div>
-            </div>
-            <div class="feed_cardbox">
-                <div class="feed_infobox">
-                    <div class="feed_metadata">
-                        <div class="feed_user">
-                            <a href="">
-                                <span class="nickname"></span>
-                            </a>
-                        </div>
-                        <div class="feed_timebox">
-                            <span></span>
-                        </div>
-                    </div>
-                    <button class="feed_follow_btn">팔로우</button>
-                </div>
-                <div class="feed_cardimg">
-                    <img src="" alt="">
-                </div>
-                <div class="feed_likebox">
-                    <button class="feed_like_btn">
-                        <span class="like_icon">♡ 좋아요</span>
-                        <span class="like_sheep">0</span>
-                    </button>
-                </div>
-            </div>
-            <div class="feed_cardbox">
-                <div class="feed_infobox">
-                    <div class="feed_metadata">
-                        <div class="feed_user">
-                            <a href="">
-                                <span class="nickname"></span>
-                            </a>
-                        </div>
-                        <div class="feed_timebox">
-                            <span></span>
-                        </div>
-                    </div>
-                    <button class="feed_follow_btn">팔로우</button>
-                </div>
-                <div class="feed_cardimg">
-                    <img src="" alt="">
-                </div>
-                <div class="feed_likebox">
-                    <button class="feed_like_btn">
-                        <span class="like_icon">♡ 좋아요</span>
-                        <span class="like_sheep">0</span>
-                    </button>
-                </div>
-            </div>
-            
-
-         
         </div>
     </section>
 
