--- a/src/main/resources/templates/main/mainpage.html
+++ b/src/main/resources/templates/main/mainpage.html
@@ -62,7 +62,7 @@
                 <!-- 쪽지 이동 -->
               </li>
               <li class="main_top_category_list2">
-                <a href="" class="main_top_category_list_title">검색</a>
+                <a th:href="@{/search}" class="main_top_category_list_title">검색</a>
 
               <li class="main_top_category_list2">
                 <a href="" class="main_top_category_list_title">이벤트</a>
@@ -325,7 +325,7 @@
             <div class="novel_content">
               <div class="novel_content_wrapper">
                 <div class="novel_box">
-                  <div class="novel_box_border">
+                  <div class="novel_box_border" th:each="novel :${novelList}">
                     <div class="novel_thumbnail_wrap">
                         <div class="novel_data">
                           <div class="novel_box_inner">
@@ -343,85 +343,18 @@
                             </a>
                             <a href="" class="book_data2">  <!--책 정보 url이동-->
                               <div class="novel_box_content">
-                                <p class="novel_box_content_title">제목제목제목</p>
-                                <p class="novel_box_content_content">쓴 사람 닉네임</p>
+                                <p class="novel_box_content_title" th:text="${novel.novelTitle}"></p>
+                                <p class="novel_box_content_content" th:text="${novel.userNickName}"></p>
                               </div>
                             </a>
                           </div>
                         </div>
                         <div class="novel_box_bottom">
-                          <p class="novel_box_bottom_content">내용내용</p>
-                          <p class="novel_box_bottom_content">내용내용</p>
+                          <p class="novel_box_bottom_content" th:text="${novel.novelContent}"></p>
                         </div>
                     </div>
                   </div>
                 </div>
-                  <div class="novel_box_border2">
-                    <div class="novel_thumbnail_wrap">
-                      <div class="novel_data">
-                        <div class="novel_box_inner">
-                          <a href="" class="novel_url">
-                            <div class="thumbnail2">
-                              <div class="novel_thumbnail_inner">
-                                <div class="novel_thumbnail_inner2">
-                                  <div class="novel_thumbnail_inner_picture">
-                                    <img th:src="@{/images/main/novel_thumbnail.png}" alt=""
-                                    class="novel_thumbnail_inner_picture2">
-                                  </div>
-                                </div>
-                              </div>
-                            </div>
-                          </a>
-                          <a href="" class="book_data2">  <!--책 url이동-->
-                            <div class="novel_box_content">
-                              <p class="novel_box_content_title">제목제목제목</p>
-                              <p class="novel_box_content_content">쓴 사람 닉네임</p>
-                            </div>
-                          </a>
-
-                        </div>
-                      </div>
-
-                      <div class="novel_box_bottom">
-                        <p class="novel_box_bottom_content">내용내용</p>
-                        <p class="novel_box_bottom_content">내용내용</p>
-                      </div>
-                  </div>
-              </div>
-                <div class="novel_box2">
-                  <div class="novel_box_border3">
-                    <div class="novel_thumbnail_wrap">
-                      <div class="novel_data">
-                        <div class="novel_box_inner">
-                          <a href="" class="novel_url">
-                            <div class="thumbnail2">
-                              <div class="novel_thumbnail_inner">
-                                <div class="novel_thumbnail_inner2">
-                                  <div class="novel_thumbnail_inner_picture">
-                                    <img th:src="@{/images/main/novel_thumbnail.png}" alt=""
-                                    class="novel_thumbnail_inner_picture2">
-                                  </div>
-                                </div>
-                              </div>        
-                            </div>
-                          </a>
-                          <a href="" class="book_data2">  <!--책 url이동-->
-                            <div class="novel_box_content">
-                              <p class="novel_box_content_title">제목제목제목</p>
-                              <p class="novel_box_content_content">쓴 사람 닉네임</p>
-                            </div>
-                          </a>
-
-                        </div>
-                      </div>
-
-                      <div class="novel_box_bottom">
-                        <p class="novel_box_bottom_content">내용내용</p>
-                        <p class="novel_box_bottom_content">내용내용</p>
-                      </div>
-                  </div>
-                </div>
-              </div>
             </div>
 
         </div>
@@ -524,15 +457,13 @@
                   <a href="" class="main_deal_boox_content">
                     <div class="main_deal_boox_content_box">
                       <p class="title">제목제목</p>
-                      <p class="author">지은이</p>
-                      <p class="price">가격가격</p>
                     </div>
                   </a>
                 </div>
               </li>
               <li class="main_deal_item">
                 <div class="main_deal_box">
-                  <a href=""> <!--중고거래 게시글로 이동-->
+                  <a href=> <!--중고거래 게시글로 이동-->
                     <div class="main_deal_book_thumbnail">
                       <div class="main_deal_book_thumbnail_inner">
                         <img th:src="@{/images/main/deal_thumbnail.png}" alt="" class="main_deal_book_thumbnail_img">
@@ -653,21 +584,29 @@
       <div class="category_popup" id="category_wrap">
           <section class="category_popup_inner_layout">
             <section class="category_popup_content_layout">
+              <a th:href="@{/board/post/main}">
               <span class="category_popup_title">게시판</span>
-
+              </a>
               <span class="category_popup_content">소설 쓰기</span>
-              <span class="category_popup_content">중고거래</span>
-              <span class="category_popup_content">독후감</span>
+              <span class="category_popup_content">중고 거래</span>
+              <span class="category_popup_content">사용자 문의</span>
               <span class="category_popup_content">자유</span>
-
               <span class="category_popup_title2">쪽지</span>
+              <a th:href="@{/message/letter/get}">
               <span class="category_popup_content">받은 쪽지함</span>
-              <span class="category_popup_content" style="margin-bottom: 40px">쪽지 보내기</span>
-
+              </a>
+              <a th:href="@{/message/letter/send}">
+              <span class="category_popup_content" style="margin-bottom: 40px">보낸 쪽지함</span>
+              </a>
+              <a th:href="@{/mypage/int}">
               <span class="category_popup_title3">내 서재</span>
+              </a>
+              <a href="">
               <span class="category_popup_title3">이벤트</span>
+              </a>
+              <a th:href="@{/search}">
               <span class="category_popup_title3">검색</span>
-              
+              </a>
             </section>
           </section>
       </div>
