--- a/src/main/resources/templates/user/findaccountphoneinfo.html
+++ b/src/main/resources/templates/user/findaccountphoneinfo.html
@@ -121,12 +121,12 @@
             </label>
           </div>
         </div>
-        <p data-e-1160 class="text">
-          <button data-e-1160 type="button" class="text-button">해외에서 휴대폰 인증이 어려우신가요?</button>
-        </p>
+<!--        <p data-e-1160 class="text">-->
+<!--          <button data-e-1160 type="button" class="text-button">해외에서 휴대폰 인증이 어려우신가요?</button>-->
+<!--        </p>-->
         <div data-e-1160 class="button-area">
           <button data-e-1160 type="button" disabled="disabled" class="next-button mds-button mds-button--primary mds-button--h56 mds-button--r4">
-            <a th:href="@{/user/phoneinfocode}">다음</a>
+            <a th:href="@{/user/findaccountphoneinfocode}">다음</a>
           </button>
         </div>
 <!--        <div data-e-1160 aria-modal="true" role="alertdialog" class="mds-dialog agency-popup mds-dialog&#45;&#45;open mds-dialog&#45;&#45;action mds-dialog&#45;&#45;bottom mds-dialog&#45;&#45;mobile">-->
@@ -161,7 +161,6 @@
             </div>
           </div>
         </div>
-      </div>
       </div>
       </div>
     </section>
