--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -78,7 +78,7 @@
         <a data-b-1130 th:href="@{/user/register}">회원가입</a>
       </li>
 <!--      <li data-b-1130>-->
-        <a data-b-1130 href="">계정 정보 찾기</a>
+        <a data-b-1130 th:href="@{/user/findaccountphoneinfo}">계정 정보 찾기</a>
 <!--      </li>-->
 <!--      <li data-b-1130>-->
 <!--        <a data-b-1130 href="">기업회원 로그인</a>-->
