--- a/src/main/resources/static/css/administrator/admin_user.css
+++ b/src/main/resources/static/css/administrator/admin_user.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  text-decoration-line: none;
 }
 
 ul {
@@ -185,6 +186,19 @@ main {
   width: auto;
 }
 
+.startJDate,
+.endJDate,
+.startVDate,
+.endVDate{
+  height: 28px;
+  padding: 0 8px;
+  border: 1px solid #d6dae1;
+  border-radius: 3px;
+  box-sizing: border-box;
+  line-height: 28px;
+  outline: 0 none;
+}
+
 .main__userInfo-select {
   height: 28px;
   padding: 0 24px 0 8px;
@@ -205,18 +219,8 @@ main {
   outline: 0 none;
 }
 
-.startDate,
-.endDate {
-  height: 28px;
-  padding: 0 8px;
-  border: 1px solid #d6dae1;
-  border-radius: 3px;
-  box-sizing: border-box;
-  line-height: 28px;
-  outline: 0 none;
-}
-
-.main__user-age {
+.startUserAge,
+.endUserAge{
   width: 40px;
   text-align: right;
   font-size: 13px;
@@ -413,7 +417,6 @@ main {
   text-align: center;
   background-color: #fff;
   font-size: 13px;
-  display: none;
 }
 
 .main__searched-result-page-btn {
@@ -445,7 +448,7 @@ main {
   margin-left: 5px;
 }
 
-.main__searched-result-page-btn strong {
+.main__searched-result-page-btn a {
   color: #fff;
   background-color: #5eadac;
   display: inline-block;
