관리자 삭제 회원 삭제

--- a/src/main/resources/templates/administrator/admin_user.html
+++ b/src/main/resources/templates/administrator/admin_user.html
@@ -225,6 +225,7 @@
                             type="checkbox"
                             name="checkOne"
                             class="main__result-checkone"
+                            th:data-id="${user.userId}"
                           />
                         </label>
                       </li>
