--- a/src/main/resources/static/css/feed/feedpage.css
+++ b/src/main/resources/static/css/feed/feedpage.css
@@ -287,16 +287,20 @@ a{
 }
 
 .sub_list > li{
+    display: flex;
     list-style: none;
 }
 
-.sub_list > li > button{
+.sub_list > li > a{
+    width: 100%;
+    height: 100%;
     font-size: 14px;
     color: #242424;
     padding: 6px 16px;
     border-radius: 100px;
     background-color: #f7f7f7;
     cursor: pointer;
+    border: 1px solid black;
 }
 
 .feed_contentbox{
@@ -386,6 +390,16 @@ a{
     color: #fff;
     width: 48px;
     font-size: 12px;
+    margin-right: 8px;
+}
+
+.feed_unfollow_btn{
+    height: 32px;
+    border-radius: 4px;
+    background-color: #333;
+    color: #fff;
+    width: 48px;
+    font-size: 11px;
     margin-right: 8px;
 }
 
